--- a/opticalcharacterrecog.ipynb
+++ b/opticalcharacterrecog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -145,14 +145,14 @@
    ],
    "source": [
     "print(\"loading the trained model\")\n",
-    "model = load_model('C:\\\\Users\\HP\\Desktop\\optical-character-recognition-OCR-master\\models/model45.h5')\n",
+    "model = load_model('C:\\\\Users\\HP\\Desktop\\optical-character-recognition-OCR-master\\models/model5.h5')\n",
     "print(\"loaded\")\n",
     "#model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
     "\tbox = cv2.boxPoints(rect)\n",
     "\tbox = np.int0(box) # box now has four vertices of rotated rectangle\n",
     "\tcv2.drawContours(drawrect,[box],0,(0,0,255),10)\n",
-    "\t#v2.imwrite('rotated_rect.png', drawrect)\n",
+    "\tcv2.imwrite('rotated_rect.png', drawrect)\n",
     "\n",
     "\t#Change rotation angle if the tilt is in another direction\n",
     "\trect = list(rect)\n",
@@ -436,8 +436,8 @@
     "\timg_for_ext = rotate(img_for_ext,M)\n",
     "\t\n",
     "\t#for debugging purpose, we also write the images to files\n",
-    "\t#cv2.imwrite('img_for_detection.png', img_for_det)\n",
-    "\t#cv2.imwrite('img_for_extraction.png', img_for_ext)\n",
+    "\tcv2.imwrite('img_for_detection.png', img_for_det)\n",
+    "\tcv2.imwrite('img_for_extraction.png', img_for_ext)\n",
     "\n",
     "\t#get threshold to determine how much gap should be considered as the line gap\n",
     "\tLinesThres = get_lines_threshold(50, img_for_det)\n",
@@ -541,243 +541,8 @@
     "\t\n",
     "\treturn all_words, words_on_line, max_height_on_line\n",
     "\n",
-    "def fix_i_j(rect, max_line_height, max_w):\n",
-    "\t# ========== correct dots commas\n",
-    "\tj = 0\n",
-    "\ti_dot_list = []\n",
     "\n",
-    "\tfor i in rect:\n",
-    "\t\tx = i[0]\n",
-    "\t\ty = i[1]\n",
-    "\t\tw = i[2]\n",
-    "\t\th = i[3]\n",
-    "\t\t\n",
-    "\t\t\n",
-    "\t\t#if the dot of i is the last element in the rect, the [j+1] index will not work. so we put [j-1] separately here\n",
-    "\t\tif  (j is len(rect)-1 and (h < max_line_height/3)):\n",
-    "\t\t\t\n",
-    "\t\t\tif( (h < max_line_height/3) and (abs(rect[j-1][0]+rect[j-1][2] - (x+w)) < max_w/3.5) ):\n",
-    "\t\t\t\t#correct i\n",
-    "\t\t\t\t#rect[j-1][3] = rect[j-1][3] + (rect[j-1][1] - y)\n",
-    "\t\t\t\trect[j-1] = (rect[j-1][0], rect[j-1][1], rect[j-1][2], rect[j-1][3] + (rect[j-1][1] - y))\n",
-    "\t\t\t\t\n",
-    "\t\t\t\t#rect[j-1][1] = y\n",
-    "\t\t\t\trect[j-1] = (rect[j-1][0], y, rect[j-1][2], rect[j-1][3])\n",
-    "\t\t\t\ti_dot_list.append(j)\n",
-    "\t\t\t\n",
-    "\t\t\telif (h < max_line_height/2.4 and y > (rect[j-1][1] + rect[j-1][3]/3)):\n",
-    "\t\t\t\t#rect[j][1] = rect[j][1] - (max_line_height/2)\n",
-    "\t\t\t\trect[j] = [x,y-(max_line_height/2),w,h+(max_line_height/2)]\n",
-    "\t\t\t\n",
-    "\t\t\n",
-    "\t\t#if the dot of i is not the last element in the rect\n",
-    "\t\telse:\n",
-    "\t\t\n",
-    "\t\t\tif( (h < max_line_height/3) and (abs(rect[j+1][0]+rect[j+1][2] - (x+w)) < max_w/3.5)):\n",
-    "\t\t\t\t#correct i\n",
-    "\t\t\t\t#rect[j+1][3] = rect[j+1][3] + (rect[j+1][1] - y)\n",
-    "\t\t\t\trect[j+1] = (rect[j+1][0], rect[j+1][1], rect[j+1][2], rect[j+1][3] + (rect[j+1][1] - y))\n",
-    "\t\t\t\t\n",
-    "\t\t\t\t#rect[j+1][1] = y\n",
-    "\t\t\t\trect[j+1] = (rect[j+1][0], y, rect[j+1][2], rect[j+1][3])\n",
-    "\t\t\t\t\n",
-    "\t\t\t\ti_dot_list.append(j)\n",
-    "\t\t\t\t\n",
-    "\t\t\telif( (h < max_line_height/3) and (abs(rect[j-1][0]+rect[j-1][2] - (x+w)) < max_w/3.5) ):\n",
-    "\t\t\t\t#correct i\n",
-    "\t\t\t\t#rect[j-1][3] = rect[j-1][3] + (rect[j-1][1] - y)\n",
-    "\t\t\t\trect[j-1] = (rect[j-1][0], rect[j-1][1], rect[j-1][2], rect[j-1][3] + (rect[j-1][1] - y))\n",
-    "\t\t\t\t\n",
-    "\t\t\t\t#rect[j-1][1] = y\n",
-    "\t\t\t\trect[j-1] = (rect[j-1][0], y, rect[j-1][2], rect[j-1][3])\n",
-    "\t\t\t\t\n",
-    "\t\t\t\ti_dot_list.append(j)\n",
-    "\t\t\t\n",
-    "\t\t\telif (h < max_line_height/2.4 and y > (rect[j-1][1] + rect[j-1][3]/3)):\n",
-    "\t\t\t\t#rect[j][1] = rect[j][1] - (max_line_height/2)\n",
-    "\t\t\t\trect[j] = [x,y-(max_line_height/2),w,h+(max_line_height/2)]\n",
-    "\t\t\t\t\n",
-    "\t\tj = j + 1\n",
-    "\t\t\t\n",
-    "\t# ===== end of fixing dots in i and j\n",
     "\n",
-    "\t#delete the dots from rect array which belongs to i and j\n",
-    "\trect = np.delete(rect, i_dot_list, axis=0)\n",
-    "\t# =======================\n",
-    "\t\n",
-    "\treturn rect\n",
-    "\n",
-    "def get_characters(raw_image,max_line_height,line,word):\n",
-    "\n",
-    "\t# === Find Contours\n",
-    "\n",
-    "\tmo_image = raw_image.copy()\n",
-    "\tcontour0 = cv2.findContours(mo_image.copy(),cv2.RETR_EXTERNAL,cv2.CHAIN_APPROX_SIMPLE)\n",
-    "\tcontours = [cv2.approxPolyDP(cnt,2,True) for cnt in contour0[0]]\n",
-    "\n",
-    "\t# === Extract Bounding Rectangles\n",
-    "\tmaxArea = 0\n",
-    "\trect=[]\n",
-    "\tfor ctr in contours:\n",
-    "\t\tmaxArea = max(maxArea,cv2.contourArea(ctr))\n",
-    "\n",
-    "\tareaRatio = 0.008\n",
-    "\n",
-    "\tfor ctr in contours:\n",
-    "\t\tif cv2.contourArea(ctr) > maxArea * areaRatio: \n",
-    "\t\t\trect.append(cv2.boundingRect(cv2.approxPolyDP(ctr,1,True)))\n",
-    "\t\t\t\n",
-    "\t#Find max_line_height and width\n",
-    "\tmax_w = 0\n",
-    "\t\n",
-    "\tfor i in rect:\n",
-    "\t\tx = i[0]\n",
-    "\t\ty = i[1]\n",
-    "\t\tw = i[2]\n",
-    "\t\th = i[3]\n",
-    "\n",
-    "\t\tif(w>max_w):\n",
-    "\t\t\tmax_w = w\n",
-    "\n",
-    "\t# Sort rect left to right, top to bottom, plus correct the dots and commas\n",
-    "\n",
-    "\t#sort all rect by their x\n",
-    "\trect.sort(key=lambda b: b[0])\n",
-    "\n",
-    "\t#There are two contours detected for the characters such as i and j. So we need to merge two contours of 'dot' and the 'base' of i and j\n",
-    "\t#Fix i and j\n",
-    "\trect = fix_i_j(rect, max_line_height, max_w)\n",
-    "\t\n",
-    "\t# remove artifacts - usually artifacts found are manipulated as 0 height by the i&j dot fixing functions\n",
-    "\tminus_count = 0\n",
-    "\tminus_list = []\n",
-    "\tfor i in rect:\n",
-    "\t\tx = i[0]\n",
-    "\t\ty = i[1]\n",
-    "\t\tw = i[2]\n",
-    "\t\th = i[3]\n",
-    "\t\t\n",
-    "\t\tif h<0:\n",
-    "\t\t\tminus_list.append(minus_count)\n",
-    "\t\t\n",
-    "\t\tminus_count = minus_count + 1\n",
-    "\t\n",
-    "\trect = np.delete(rect, minus_list, axis=0)\n",
-    "\t# ================= end ===============================\n",
-    "\t\n",
-    "\trect_segmented_image = mo_image.copy()\n",
-    "\t\n",
-    "\tsymbols=[]\n",
-    "\n",
-    "\tall_letters = []\n",
-    "\n",
-    "\t#count used for filename naming\n",
-    "\tcount = 0\n",
-    "\n",
-    "\t#raw_input('>')\n",
-    "\tfor i in rect:\n",
-    "\t\tx = i[0]\n",
-    "\t\ty = i[1]\n",
-    "\t\tw = i[2]\n",
-    "\t\th = i[3]\n",
-    "\t\t\n",
-    "\t\tp1 = (x,y)\n",
-    "\t\tp2 = (x+w,y+h)\n",
-    "\t\t\n",
-    "\t\tletter = mo_image[y:y+h,x:x+w]\n",
-    "\t\t\n",
-    "\t\t#resize letter image to 32x32 ======================================\n",
-    "\t\t#resize letter content to 28x28\n",
-    "\t\t\n",
-    "\t\to_height = letter.shape[0]\n",
-    "\t\to_width = letter.shape[1]\n",
-    "\t\t\n",
-    "\t\t#if errors occurs due to the unwanted artifacts, then the height will somehow become zero.\n",
-    "\t\tif (o_height == 0):\n",
-    "\t\t\tletter = np.zeros((30, 30, 1), np.uint8)\n",
-    "\t\t\to_height = letter.shape[0]\n",
-    "\t\t\to_width = letter.shape[1]\n",
-    "\t\t\n",
-    "\t\t#resize height to 28 pixels\n",
-    "\t\t#we need three different conditions to work well with the aspect ratios\n",
-    "\t\t\n",
-    "\t\tif(o_height>o_width): # height greater than width\n",
-    "\n",
-    "\t\t\taspectRatio = o_width / (o_height*1.0)\n",
-    "\t\t\t\n",
-    "\t\t\theight = 26\n",
-    "\t\t\twidth = int(height * aspectRatio)\n",
-    "\t\t\tletter = cv2.resize(letter, (width,height))\n",
-    "\t\t\t\n",
-    "\t\t\t#add border which results adding of padding\n",
-    "\t\t\t\n",
-    "\t\t\tremaining_pixels_w = abs(32 - letter.shape[1])\n",
-    "\t\t\tadd_left = remaining_pixels_w // 2\n",
-    "\t\t\tadd_right = remaining_pixels_w - add_left\n",
-    "\t\t\tletter = cv2.copyMakeBorder(letter, 0, 0, add_left, add_right, cv2.BORDER_CONSTANT, value=(0,0,0))\n",
-    "\t\t\t\n",
-    "\t\t\tremaining_pixels_h = abs(32 - letter.shape[0])\n",
-    "\t\t\tadd_top = remaining_pixels_h // 2\n",
-    "\t\t\tadd_bottom = remaining_pixels_h - add_top\n",
-    "\t\t\tletter = cv2.copyMakeBorder(letter, add_top, add_bottom, 0, 0, cv2.BORDER_CONSTANT, value=(0,0,0))\n",
-    "\t\t\t\n",
-    "\t\t\t# =================\n",
-    "\t\t\t\n",
-    "\t\telif(o_width>o_height): # width greater than height\n",
-    "\t\t\t\n",
-    "\t\t\taspectRatio = abs(o_height // (o_width*1))\n",
-    "\t\t\t\n",
-    "\t\t\twidth = 26\n",
-    "\t\t\theight = int(width * aspectRatio)\n",
-    "\t\t\t\n",
-    "\t\t\tletter = cv2.resize(letter, (width,height))\n",
-    "\t\t\t\n",
-    "\t\t\t#add border which results adding of padding\n",
-    "\t\t\tremaining_pixels_w = abs(32 - letter.shape[1])\n",
-    "\t\t\tadd_left = remaining_pixels_w / 2\n",
-    "\t\t\tadd_right = remaining_pixels_w - add_left\n",
-    "\t\t\tletter = cv2.copyMakeBorder(letter, 0, 0, add_left, add_right, cv2.BORDER_CONSTANT, value=(0,0,0))\n",
-    "\t\t\t\n",
-    "\t\t\tremaining_pixels_h = abs(32 - letter.shape[0])\n",
-    "\t\t\tadd_top = remaining_pixels_h / 2\n",
-    "\t\t\tadd_bottom = remaining_pixels_h - add_top\n",
-    "\t\t\tletter = cv2.copyMakeBorder(letter, add_top, add_bottom, 0, 0, cv2.BORDER_CONSTANT, value=(0,0,0))\n",
-    "\t\t\t\n",
-    "\t\t\t# =================\n",
-    "\t\t\n",
-    "\t\telse: # both height and width equal\n",
-    "\t\t\tletter = cv2.resize(letter, (26,26))\n",
-    "\t\t\t\n",
-    "\t\t\t#add border which results adding of padding\n",
-    "\t\t\tremaining_pixels_w = abs(32 - letter.shape[1])\n",
-    "\t\t\tadd_left = remaining_pixels_w / 2\n",
-    "\t\t\tadd_right = remaining_pixels_w - add_left\n",
-    "\t\t\tletter = cv2.copyMakeBorder(letter, 0, 0, add_left, add_right, cv2.BORDER_CONSTANT, value=(0,0,0))\n",
-    "\t\t\t\n",
-    "\t\t\tremaining_pixels_h = abs(32 - letter.shape[0])\n",
-    "\t\t\tadd_top = remaining_pixels_h / 2\n",
-    "\t\t\tadd_bottom = remaining_pixels_h - add_top\n",
-    "\t\t\tletter = cv2.copyMakeBorder(letter, add_top, add_bottom, 0, 0, cv2.BORDER_CONSTANT, value=(0,0,0))\n",
-    "\t\t\tprint('letter',letter)\n",
-    "\t\t\t# =================\n",
-    "\t\t\n",
-    "\t\t\n",
-    "\t\tcv2.imwrite(os.path.join(\"C:\\\\Users\\\\HP\\\\Desktop\\\\optical-character-recognition-OCR-master\\\\out3\",\"line\"+str(line)+\".png\"+\"wo_\"+str(word)+\".png\"+\"ch_\"+str(count)+\".png\"),letter)\n",
-    "\t\tcount = count + 1\n",
-    "\t\t\n",
-    "\t\tletter = letter / 255.0\n",
-    "\t\t\n",
-    "\t\tletter = np.reshape(letter,(1024,1))\n",
-    "\t\t\n",
-    "\t\tall_letters.append(letter)\n",
-    "\n",
-    "\t\t#=================================\n",
-    "\n",
-    "\t\tcv2.rectangle(rect_segmented_image,p1,p2,255,1)\n",
-    "\n",
-    "\tcv2.imwrite('segmented.png', rect_segmented_image)\n",
-    "\n",
-    "\treturn all_letters\n",
     "\n",
     "def image_segmentation1(name1):\n",
     "    raw_image = cv2.imread(name1,0)\n",
@@ -796,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,10 +653,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def predict():    \n",
     "    listd=[]\n",
     "    new=[]\n",
@@ -944,7 +717,7 @@
     "    #print(\" \", ans)\n",
     "    print(words)\n",
     "    \n",
-    "\n",
+    "    \n",
     "    path='C:\\\\Users\\\\HP\\\\Desktop\\\\optical-character-recognition-OCR-master\\\\text\\\\'\n",
     "    for i in words:\n",
     "        global text_file\n",
@@ -959,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,6 +765,10 @@
     "            os.unlink(os.path.join(root, f))\n",
     "        for d in dirs:\n",
     "            shutil.rmtree(os.path.join(root, d))\n",
+    "    import time\n",
+    "    global timestr\n",
+    "    timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
+    "    print(timestr, 'clear 1')\n",
     "    \n",
     "def OpenTxt():\n",
     "    filename='C:\\\\Users\\\\HP\\\\Desktop\\\\optical-character-recognition-OCR-master\\\\text\\\\'+timestr+'.txt'\n",
@@ -1062,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -1071,43 +848,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "no. of lines =  4\n",
-      "[9, 9, 6, 6]\n",
-      "no. of words =  30\n",
-      "['he', 'lay', 'on', 'his', 'your', 'like', 'back', 'and', 'if', 'he', 'lifted', 'hts', 'head', 'a', 'little', 'he', 'could', 'see', 'his', 'bro', 'belly', 'slightly', 'domed', 'and', 'died', 'by', 'arches', 'into', 'stiff', 'sections']\n",
-      "he lay on his your like back and if he lifted hts head a little he could see his bro belly slightly domed and died by arches into stiff sections\n",
-      "In translate\n",
-      "⠓⠑\n",
-      "⠇⠁⠽\n",
-      "⠕⠝\n",
-      "⠓⠊⠎\n",
-      "⠽⠕⠥⠗\n",
-      "⠇⠊⠅⠑\n",
-      "⠃⠁⠉⠅\n",
-      "⠁⠝⠙\n",
-      "⠊⠋\n",
-      "⠓⠑\n",
-      "⠇⠊⠋⠞⠑⠙\n",
-      "⠓⠞⠎\n",
-      "⠓⠑⠁⠙\n",
-      "⠁\n",
-      "⠇⠊⠞⠞⠇⠑\n",
-      "⠓⠑\n",
-      "⠉⠕⠥⠇⠙\n",
-      "⠎⠑⠑\n",
-      "⠓⠊⠎\n",
-      "⠃⠗⠕\n",
-      "⠃⠑⠇⠇⠽\n",
-      "⠎⠇⠊⠛⠓⠞⠇⠽\n",
-      "⠙⠕⠍⠑⠙\n",
-      "⠁⠝⠙\n",
-      "⠙⠊⠑⠙\n",
-      "⠃⠽\n",
-      "⠁⠗⠉⠓⠑⠎\n",
-      "⠊⠝⠞⠕\n",
-      "⠎⠞⠊⠋⠋\n",
-      "⠎⠑⠉⠞⠊⠕⠝⠎\n",
-      "in image\n"
+      "20200918-225607 gui time\n",
+      "no. of lines =  3\n",
+      "[4, 6, 5]\n",
+      "no. of words =  15\n",
+      "['ducal', 'character', 'cognition', 'project', 'the', 'dentfcaton', 'ok', 'printed', 'characters', 'using', 'photoelectric', 'device', 'and', 'computer', 'sore']\n",
+      "ducal character cognition project the dentfcaton ok printed characters using photoelectric device and computer sore\n"
      ]
     }
    ],
@@ -1115,14 +861,15 @@
     "from PIL import ImageTk,Image\n",
     "from tkinter import ttk\n",
     "from ttkthemes import ThemedStyle\n",
-    "\n",
-    "\n",
+    "import time\n",
+    "global timestr\n",
     "root = Tk(  )\n",
     "root.resizable(0,0)      #will disable max/min tab of window\n",
     "root.configure(bg=\"#808080\")\n",
     "location=str()\n",
     "#root.geometry(\"3000X2000\")\n",
     "timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
+    "print(timestr,'gui time')\n",
     "im = Image.open('ocrm.png')\n",
     "ph = ImageTk.PhotoImage(im)\n",
     "#plt.imshow(ph)\n",
@@ -1239,22 +986,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20200917-223747\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
-    "print (timestr)"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
